corrected header nav visibility

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,8 +1,9 @@
-header {
+.mini-navbar-wrap {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: baseline;
+    padding: 0px 50px 0px 50px;
 }
 
 a {
